# parallel-computing

./: .gitignore
matrix-multiplication/: CMakeLists.txt  README.md  main.c
open_mp_prime/: CMakeLists.txt  main.c
prime-number/: CMakeLists.txt  main.c
shared-memory/: .gitignore  CMakeLists.txt  main.c
